upadte the  figure and navigation

--- a/_test/P1.md
+++ b/_test/P1.md
@@ -1,7 +1,7 @@
 ---
 title: "ITF Project"
-collection: project
-type: "project"
+collection: test
+type: "test"
 venue: "UC San Francisco, Department of Testing"
 date: 2012-03-01
 ---
